made nav link boxes a fixed size; fixed aligntment issue

--- a/mgsa.css
+++ b/mgsa.css
@@ -41,4 +41,5 @@ body > footer nav ul li
 {
     display: inline-block;
     margin: 0 5em;
+    width: 15em;
 }
